--- a/javascript-basics-01/Step_8.html
+++ b/javascript-basics-01/Step_8.html
@@ -3,11 +3,12 @@
     <head>
         <title>Step 8</title>
         <meta charset="UTF-8">
+        <script src="Step_8.js"></script>
     </head>
     <body>
         <form>
             <label for="age">your age : </label><input type="text" id="age" name="age"/><br/>
-            <button id="validate" name="validate">validate</button>
+            <button id="validate" name="validate" onclick="eighteen()">validate</button>
         </form>
     </body>
 </html>
