--- a/javascript-basics-02/step 3/index.html
+++ b/javascript-basics-02/step 3/index.html
@@ -3,10 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Step 3</title>
+  <script src="step_3.js"></script>
 </head>
 <body>
   <form>
-    <label for="name">Your name  : </label><input type="text" name="name" value="" id="name"/>
+    <label for="name">Your name  : </label><input type="text" name="name" value="" id="name" onchange="ch_countent()"/>
   </form>
+  <div id="content">
+
+  </div>
 </body>
 </html>
