--- a/javascript-basics-02/step 6/index.html
+++ b/javascript-basics-02/step 6/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Step 6</title>
+    <script src="step6.js"></script>
   </head>
   <body>
-      <img src="images/image1.jpg" id="image1" />
-      <img src="images/image2.jpg" id="image2" />
-      <img src="images/image3.jpg" id="image3" />
-      <img src="images/image4.jpg" id="image4" />
-      <img src="images/image5.jpg" id="image5" />
+      <img src="images/image1.jpg" id="image1" onmouseover="change_img(1)" onmouseout="original(1)"/>
+      <img src="images/image2.jpg" id="image2" onmouseover="change_img(2)" onmouseout="original(2)"/>
+      <img src="images/image3.jpg" id="image3" onmouseover="change_img(3)" onmouseout="original(3)"/>
+      <img src="images/image4.jpg" id="image4" onmouseover="change_img(4)" onmouseout="original(4)"/>
+      <img src="images/image5.jpg" id="image5" onmouseover="change_img(5)" onmouseout="original(5)"/>
   </body>
 </html>
